include/iio/iio.h

struct iio_scan;
/**
 * @struct iio_context_params
 * @brief IIO context creation information
 *
 * This structure contains parameters that can affect how the IIO context is
 * created.
 */
struct iio_context_params {
	/** @brief Handle to the standard output. If NULL, defaults to stdout. */
	FILE *out;

	/** @brief Handle to the error output. If NULL, defaults to stderr. */
	FILE *err;

	/** @brief Log level to use.
	 * Defaults to the log level that was specified at compilation. */
	enum iio_log_level log_level;

	/** @brief Under this log level (included), messages are sent to
	 * the error output ; above this log level (excluded), messages are
	 * sent to the standard output.
	 * If zero, defaults to LEVEL_WARNING. */
	enum iio_log_level stderr_level;

	/** @brief Under this log level (excluded), messages are sent without
	 * timestamp; above this log level (included), messages are sent with
	 * a timestamp. If set to LEVEL_NOLOG, messages at all log levels are
	 * sent without a timestamp.
	 * If zero, defaults to LEVEL_DEBUG. */
	enum iio_log_level timestamp_level;

	/** @brief Timeout for I/O operations in milliseconds.
	 * - IIO_TIMEOUT_BACKEND (0): use backend default timeout
	 * - IIO_TIMEOUT_INFINITE (-1): no timeout (wait indefinitely)
	 * - IIO_TIMEOUT_NONBLOCK (INT_MIN): non-blocking
	 * - Positive values: timeout after specified milliseconds
	 * - Other negative values: invalid (returns -EINVAL) */
	int timeout_ms;

	/** @brief Flags that control context behavior.
	 * Bitmask of values from enum iio_context_flags. */
	unsigned int flags;

	/** @brief Reserved for future fields. */
	char __rsrv[32];
};
/** @} */ /* ------------------------------------------------------------------*/
/* ------------------------- Scan functions ----------------------------------*/
/** @defgroup Scan Functions for scanning available contexts
 * @{
 * @struct iio_scan
 * @brief Structure holding scanning information
 */

/** @brief Scan backends for IIO contexts
 * @param params A pointer to a iio_context_params structure that contains
 *   context creation information; can be NULL
 * @param backends a NULL-terminated string containing a comma-separated list
 *   of the backends to be scanned for contexts. If NULL, all the available
 *   backends are scanned.
 * @return On success, a pointer to an iio_scan structure
 * @return On failure, a pointer-encoded error is returned
 *
 * <b>NOTE:</b> It is possible to provide backend-specific information.
 * For instance, "local,usb=0456:*" will scan the local backend and
 * limit scans on USB to vendor ID 0x0456, and accept all product IDs.
 * The "usb=0456:b673" string would limit the scan to the device with
 * this particular VID/PID. Both IDs are expected in hexadecimal, no 0x
 * prefix needed. */
__api __check_ret struct iio_scan *iio_scan(
		const struct iio_context_params *params, const char *backends);
/** @brief Destroy the given scan context
 * @param ctx A pointer to an iio_scan structure
 *
 * <b>NOTE:</b> After that function, the iio_scan pointer shall be invalid. */
__api void iio_scan_destroy(struct iio_scan *ctx);
/** @brief Get number of results of a scan operation
 * @param ctx A pointer to an iio_scan structure
 * @return The number of results of the scan operation
 */
__api __check_ret __pure size_t iio_scan_get_results_count(const struct iio_scan *ctx);
/** @brief Get description of scanned context
 * @param ctx A pointer to an iio_scan structure
 * @param idx The index of the scanned context
 * @return On success, a pointer to a NULL-terminated string
 * @return If the index is invalid, NULL is returned */
__api __check_ret __pure const char *iio_scan_get_description(
		const struct iio_scan *ctx, size_t idx);
/** @brief Get URI of scanned context
 * @param ctx A pointer to an iio_scan structure
 * @param idx The index of the scanned context
 * @return On success, a pointer to a NULL-terminated string
 * @return If the index is invalid, NULL is returned */
__api __check_ret __pure const char *iio_scan_get_uri(const struct iio_scan *ctx, size_t idx);