iio-compat.h

struct iio_context_info;
struct iio_scan_block;
/** @brief Get a description of a discovered context
 * @param info A pointer to an iio_context_info structure
 * @return A pointer to a static NULL-terminated string
 */
__api __check_ret __pure const char *iio_context_info_get_description(
		const struct iio_context_info *info);
/** @brief Get the URI of a discovered context
 * @param info A pointer to an iio_context_info structure
 * @return A pointer to a static NULL-terminated string
 */
__api __check_ret __pure const char *iio_context_info_get_uri(const struct iio_context_info *info);
/** @brief Enumerate available contexts via scan block
 * @param blk A pointer to a iio_scan_block structure.
 * @returns On success, the number of contexts found.
 * @returns On failure, a negative error number.
 *
 * Introduced in version 0.20. */
__api ssize_t iio_scan_block_scan(struct iio_scan_block *blk);
/** @brief Get the iio_context_info for a particular context
 * @param blk A pointer to an iio_scan_block structure
 * @param index The index corresponding to the context.
 * @return A pointer to the iio_context_info for the context
 * @returns On success, a pointer to the specified iio_context_info
 * @returns On failure, NULL is returned and errno is set appropriately
 *
 * Introduced in version 0.20. */
__api struct iio_context_info *iio_scan_block_get_info(
		struct iio_scan_block *blk, unsigned int index);